[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader_api = "0.11.7"
bootloader-x86_64-common = "0.11.7"
log = { version = "0.4.21", default-features = false }
conquer-once = { version = "0.4.0", default-features = false }